--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html >
 <head>
-    
-    <title>my new website</title>
+    <title>this is my website</title>
 </head>
 <body>
-    <h1>this is my github</h1>
-    <h2>look mama.im using gittu vai</h2>
+    <h1>hey mama</h1>
+    <h2>no im not your mama</h2>
 </body>
 </html>
