--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
-    <title>this is my website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>hey mama</h1>
-    <h2>no im not your mama</h2>
+    <h2>look mama.im using gittu</h2>
 </body>
 </html>
