--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>this is my first github</h1>
     <h2>look mama.im using gittu</h2>
 </body>
 </html>
