--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>this is my first github</h1>
     <h2>look mama.im using gittu</h2>
+    <h5>ore baba</h5>
+    <p>lets go for a party</p>
 </body>
 </html>
