--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>look mama.im using gittu</h2>
     <h5>ore baba</h5>
     <p>lets go for a party</p>
+    <img src="Flag-Bangladesh.jpg"
 </body>
 </html>
